[fix] posts jump issue when disabling the scroll.

--- a/client/src/components/pages/Posts/Posts.scss
+++ b/client/src/components/pages/Posts/Posts.scss
@@ -3,6 +3,7 @@
 .posts {
   margin-top: var(--nav-height);
   padding: 1em 0 2em;
+  width: 100vw;
 
   @include at-small {
     padding-top: 1.5em;
